@@ -18,7 +18,7 @@ typedef struct {
 	int		fl;
 	uint32		xyz[3];
 	int32		norm;
-	uint32		uv[2];
+	uint16		uv[2];
 } MCVERT;
 
 #define  MPATCHBLKSIZ	128		/* patch allocation block size */
@@ -235,7 +235,7 @@ int		what;
 		for (i = 0; i < 2; i++)
 			vp->uv[i] = mp->uvlim[0][i] +
 				(mp->uvlim[1][i] - mp->uvlim[0][i])*
-				(pp->uv[vid][i] + .5)*(1./4294967296.);
+				(pp->uv[vid][i] + .5)*(1./65536.);
 		vp->fl |= MT_UV;
 	}
 	return(vp->fl);
@@ -314,7 +314,7 @@ MESHVERT	*vp;
 				return(-1);
 			if (vp->uv[i] >= mp->uvlim[1][i])
 				return(-1);
-			cv.uv[i] = (uint32)(4294967296. *
+			cv.uv[i] = (uint32)(65536. *
 					(vp->uv[i] - mp->uvlim[0][i]) /
 					(mp->uvlim[1][i] - mp->uvlim[0][i]));
 		}
@@ -372,8 +372,8 @@ MESHVERT	*vp;
 		}
 		if (cv.fl & MT_UV) {
 			if (pp->uv == NULL) {
-				pp->uv = (uint32 (*)[2])calloc(256,
-						2*sizeof(uint32));
+				pp->uv = (uint16 (*)[2])calloc(256,
+						2*sizeof(uint16));
 				if (pp->uv == NULL)
 					goto nomem;
 			}
@@ -617,7 +617,7 @@ FILE	*fp;
 			(ms->npatches*sizeof(MESHPATCH) +
 			vcnt*3*sizeof(uint32) +
 			nscnt*sizeof(int32) +
-			uvscnt*2*sizeof(uint32) +
+			uvscnt*2*sizeof(uint16) +
 			tcnt*sizeof(struct PTri) +
 			t1cnt*sizeof(struct PJoin1) +
 			t2cnt*sizeof(struct PJoin2))/(1024.*1024.));
