@@ -74,7 +74,7 @@ FILE			*fp;
 	if (flags & MT_UV)
 		for (i = 0; i < pp->nverts; i++)
 			for (j = 0; j < 2; j++)
-				putint((long)pp->uv[i][j], 4, fp);
+				putint((long)pp->uv[i][j], 2, fp);
 					/* local triangles */
 	putint((long)pp->ntris, 2, fp);
 	for (i = 0; i < pp->ntris; i++) {
